	- mklbtype -inc: add the comment option only once if several types
	- diff: fix for the no predecessor case, and support for -n flag
	- lock -rep: fix for no -nusers
	- unco: skip the dialog for dirs; rmbranch before handling next arg.

0.20 Sat Feb 20 17:58:45 GMTST 2010
        - mkbrtype -arc -ord and in a remote vob
	- support for global types.

0.21 Sun Jun 13 13:26:59 GMTDT 2010
        - mkbranch with standard view (not ##:BranchOff)
	- hyperlink and attribute types -shared
	- mklbtype -arc: renamed new type to temporary, for later use
	- rmlabel: support for family types and RmLBTYPE attribute
	- mklabel: removes the RmLBTYPE attribute on the same version
	- _EqLbTypeList: produce a list of equivalent fixed lbtypes
	- setcs: support for incremental types
	- updthltypes: tool to convert existing hltypes to -shared

0.22 Sat Jun 19 17:06:43 GMTDT 2010
        - mkxxtype -glo -rep: fix
	- pod indentation
	- rmtype: remove whole label family, including attribute type
	- setcs: fix to support all default options

0.23 Thu Jan 27 14:17:36 GMTST 2011
        - bugfix: ensure ordinary types
	- bugfix: mklbtype -rep -fam creates a Rm attype
	- fixed missing feature: mklbtype -fam after archiving, creates an EcInc
	- rmlabel adds the attribute on all versions labelled with fixed labels
	- added extra/Examples.pod

0.24 Wed Feb  2 18:34:46 GMTST 2011
        - extra/Examples.pod: fixes and additions
	- des: added from DSB.pm, adapted to genealogy (possibly multiple parents)
	- des -family lbtype:XXX
	- rmtype: fix for family types
	- mklbtype -arc locks the types archived

0.25 Fri Mar 11 16:48:50 GMT 2011
        - Examples.pod: typos, and switched setcs for mkview -equiv
	- des -fam n: only the most recent equivalent fixed types
	- mkview -clone -equiv TTT,1-Jan --requires Date::Parse

0.26 Tue Mar 22 17:03:20 GMTST 2011
        - des -par/fam: fix to support no argument
	- mkview -equiv: non local brtype in config spec