@@ -79,6 +79,6 @@ See also collaborative maintenance site:
 COPYRIGHT AND LICENCE
 
 Copyright (c) 2007 IONA Technologies PLC until v 0.05.
-Copyright (c) 2008-2010 Marc Girod (marc.girod@gmail.com) for later changes.
+Copyright (c) 2008-2011 Marc Girod (marc.girod@gmail.com) for later changes.
 All rights reserved. This Perl program is free software; you may
 redistribute it and/or modify it under the same terms as Perl itself.
